--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       border-radius: 12px;
       box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
       animation: shake 0.5s infinite alternate ease-in-out;
+      cursor: pointer;
     }
     @keyframes shake {
       0% { transform: rotate(-1deg); }
@@ -39,7 +40,11 @@
 </head>
 <body>
   <h1>Click To Play</h1>
-  <img id="randomImage" src="" alt="Shaking 1:1 Image" />
+  
+  <!-- Image wrapped in anchor tag -->
+  <a id="imageLink" href="https://www.google.com" target="_blank">
+    <img id="randomImage" src="" alt="Shaking 1:1 Image" />
+  </a>
 
   <script>
     const images = [
@@ -60,7 +65,7 @@
     // Show first image immediately
     showNextImage();
 
-    // Then change image every 3 seconds
+    // Change image every 3 seconds
     setInterval(showNextImage, 3000);
   </script>
 </body>
