--- a/index.html
+++ b/index.html
@@ -67,9 +67,9 @@
     <!-- Popup container -->
     <div id="popup" class="popup-container">
         <div class="popup-content">
-            <h2>Welcome to Our Blog!</h2>
+            <h3>Click To Play Full Video!</h3>
       <a href="https://www.google.com" target="_blank" onclick="hidePopup()">      
-<img class="popup-image" src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEihqvN44px9mluQAN0vzStTOxJfcqgXWp6eMcRxhgm3rTZd5XfcnrFd3IETJTCfjXH71eiT9OgCDCXwkcV8VfK1beA7snKmnwAqMJe9T3X260kkNWkKid8731L_Al_WH61rwbGYD1czywajCQ0c32Hs9B4NMsHoyfIX_P6eyYgrfxnLiel5y2YZDQHG6yc/s600/depositphotos_76756387-stock-illustration-video-player-with-black.jpg" alt="Popup Image" />
+<img class="popup-image" src="https://blogger.googleusercontent.com/img/b/R29vZ2xl/AVvXsEhUxH25Ye-zpdnoHSm_Pt6KkXgHXoAWH6jPln-KZt8mXVuD-9eW_ZEuvIWeZqh9sq1cvPZR1SpWzT1dX4q7PpWrCTNR1vuVO9ZzcbD1jkIakv4ZHDoPJ50dbExpwDrce_Sa9pmFlWHimuqUQlzN_itEQVsFaic2jujRC2SnHlnHEUPm6_3fro3MD0DlHBe3/s16000/505229093_640681242469330_6379027105936457636_n.jpg" alt="Popup Image" />
       </a>
 
             <div class="popup-buttons">
